@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-31T16:37:25Z",
-  "count_outdated" : 592,
-  "uniques_outdated" : 378,
-  "count" : 623,
+  "timestamp" : "2022-11-01T02:34:18Z",
+  "count_outdated" : 594,
+  "uniques_outdated" : 379,
+  "count" : 624,
   "uniques" : 395,
   "clones" : [
     {
-      "timestamp": "2022-10-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
