@@ -1,3 +1,11 @@
+2022-11-01T02:34:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3366348683 # 572
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 378 592 / 395 623
+* notice: next accum: outdated-unq outdated-all / unq all: 379 594 / 395 624
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-10-17] / [2022-10-18 2022-10-31]
+
 2022-10-31T16:37:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3363036744 # 571
 * notice: last 14d: unq all: 3 31
